# UELer

./: .gitattributes  .gitignore  Makefile  README.md  constants.py  data_loader.py  image_utils.py  mkdocs.yml  pyproject.toml  sitecustomize.py  test_results.txt  usercustomize.py
.binder/: environment.yml  postBuild
dev_note/: Cell_annotation.md  FOV_load_cycle.md  Packaging_plan.md  Todos.md  batch_export.md  gallery_width.md  github_issues.md  index.md  main_viewer.md  ome_tiff_loading.md  topic_export_pipeline.md  topic_heatmap_flowsom_cell_annotation.md  topic_map_mode_spatial.md  topic_mask_rendering_highlighting_coloring.md  topic_ome_tiff_loading.md  topic_packaging_and_project.md  topic_plugin_development.md  topic_roi_gallery_expression.md  topic_viewer_runtime_ui.md
doc/: log.md
docs/: faq.md  getting-started.md  index.md  installation.md
env/: environment.yml
script/: run_ueler.ipynb  run_ueler_BIA.ipynb  run_ueler_binder.ipynb
site/: 404.html  index.html  sitemap.xml
tests/: __init__.py  bootstrap.py  test_annotation_palettes.py  test_cache_settings.py  test_cell_annotation.py  test_cell_annotation_integration.py  test_cell_annotation_plugin.py  test_cell_annotation_serialize.py  test_cell_gallery.py  test_cell_table_editor.py  test_channel_grid_view.py  test_channel_legend.py  test_chart_cell_gallery_link.py  test_chart_footer_behavior.py  test_checkpoint_store.py  test_color_palette_widget.py  test_export_fovs_batch.py  test_export_fovs_mask_customization.py  test_export_job.py  test_fov_detection.py  test_fov_detection_fix.py  test_gallery_heatmap_integration.py  test_heatmap_adapter.py  test_heatmap_marker_selection.py  test_heatmap_selection.py  test_histogram_plugin.py  test_image_display_tooltip.py  test_initial_display.py  test_issue108_heatmap_refresh.py  test_issue109_heatmap_zoom.py  test_issue110_bia_loader.py  test_lasso_selection.py  test_log_console.py  test_logging_sweep.py  test_map_descriptor_loader.py  test_map_mode_activation.py  test_map_mode_initial_display.py  test_mask_color_overlay.py  test_mask_color_sets.py  test_mask_painter_continuous.py  (+18 more)
tools/: README.md  scan_local_info.py
ueler/: __init__.py  _compat.py  bia_loader.py  constants.py  data_loader.py  image_utils.py  runner.py
viewer/: __init__.py  annotation_display.py  (+9 more)
(+156 files in other folders)
