[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ueler"
version = "0.3.1"
description = "Usability Enhanced Linked Viewer for MIBI imaging"
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-only"
license-files = ["LICENSE.txt"]
authors = [
    { name = "Yu-Le Wu (Hartmann Lab, DKFZ)" }
]
keywords = ["imaging", "viewer", "notebook", "MIBI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scikit-image>=0.19",
    "dask",
    "dask-image",
    "ipydatagrid",
    "panel",
    "bqplot",
    "seaborn",
    "seaborn-image",
    "opencv-python",
    "watchfiles",
    "jupyter-scatter",
    "ipywidgets>=8.1",
    "anywidget>=0.9",
    "numpy",
]

[project.optional-dependencies]
ark = ["ark-analysis==0.7.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
homepage = "https://github.com/HartmannLab/UELer"
documentation = "https://github.com/HartmannLab/UELer"

[tool.setuptools.packages.find]
include = ["ueler", "ueler.*"]
exclude = ["tests", "tests.*", "dev_note", "script"]

[tool.setuptools.package-data]
"ueler.viewer" = ["images/*"]
